--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@bahmutov/print-env": "1.3.0",
+    "@testing-library/cypress": "10.0.1",
     "colon-names": "1.0.0",
     "cypress": "13.3.1",
     "eslint": "8.49.0",
