--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,14 @@ name: Cypress Tests
 on: [push]
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
+  single-run:
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        run: actions/checkout@v2
-
+        uses: actions/checkout@v4
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v6
+        timeout-minutes: 10
         with:
           build: npm run build
           start: npm start
