removed test fetch

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@testing-library/cypress": "10.0.1",
     "colon-names": "1.0.0",
     "cypress": "13.3.1",
+    "cypress-wait-until": "2.0.1",
     "eslint": "8.49.0",
     "eslint-plugin-cypress": "2.14.0",
     "eslint-plugin-json-format": "2.0.1",
